# GASP

./: .gitignore  README.md  pyproject.toml
data/: .gitignore  gaia_smbhb_candidates_lc_compressed.parquet
data/gaia_qso_period_gt100d/: part_0.parquet  part_1.parquet  part_10.parquet  part_11.parquet  part_12.parquet  part_13.parquet  part_14.parquet  part_15.parquet  part_16.parquet  part_17.parquet  part_18.parquet  part_19.parquet  part_2.parquet  part_20.parquet  part_21.parquet  part_22.parquet  part_23.parquet  part_24.parquet  part_3.parquet  part_4.parquet  part_5.parquet  part_6.parquet  part_7.parquet  part_8.parquet  part_9.parquet
notebooks/: gaia_MCMC_example.ipynb  gaia_MCMC_population.ipynb  gaia_qso_initial_selection.ipynb  gaia_qso_periods.ipynb  gasp_crossmatch.ipynb
results/: bayes_factors.parquet  gaia_qso_period_gt100d.parquet  gasp_only_candidates.csv  good_rhat.parquet
results/periods/: part_0.parquet  part_1.parquet  part_10.parquet  part_100.parquet  part_101.parquet  part_102.parquet  part_103.parquet  part_104.parquet  part_105.parquet  part_106.parquet  part_107.parquet  part_108.parquet  part_109.parquet  part_11.parquet  part_110.parquet  part_111.parquet  part_112.parquet  part_113.parquet  part_114.parquet  part_115.parquet  part_116.parquet  part_117.parquet  part_118.parquet  part_119.parquet  part_12.parquet  part_120.parquet  part_121.parquet  part_122.parquet  part_123.parquet  (+357 more)
src/: download_gaia_lightcurves.py  evidence.py  kernels.py  mcmc.py  parallel_utils.py  periodicity.py  preprocessing.py  red_noise.py
